# switchboard-on-demand-client

./: Cargo.toml  README.md
src/: address_lookup_table.rs  associated_token_account.rs  crossbar.rs  gateway.rs  lib.rs  lut.rs  lut_owner.rs  oracle_job.rs  oracle_job.serde.rs  pull_feed.rs  recent_slothashes.rs
src/accounts/: mod.rs  oracle.rs  pull_feed.rs  queue.rs  state.rs
src/instructions/: mod.rs  pull_feed_submit_response_ix.rs  pull_feed_submit_response_many_ix.rs
