[package]
name = "switchboard-on-demand-client"
description = "Switchboard On Demand Client: Interact with the Switchboard On Demand and Crossbar API"
version = "0.1.6"
edition = "2021"
license = "MIT"

[dependencies]
anyhow_ext = "0.2.1"
arrayref = "0.3.7"
base58 = "0.2.0"
base64 = "0.22.1"
borsh = "1.5.1"
bs58 = { version = "0.4", features = ["alloc"] }
bytemuck = "1.16.1"
futures = "0.3.30"
hex = "0.4.3"
lazy_static = "1.5.0"
pbjson = "0.7.0"
prost = "0.13.1"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
solana-client = "^1.16"
solana-sdk = "^1.16"
